# siqadconn

./: .gitignore  .travis.yml  CMakeLists.txt  LICENSE  README.md  appveyor.yml  setup.py
docker-build/: Dockerfile
src/: siqadconn.cc  siqadconn.h
swig/: siqadconn.i
